Integrate principles menu into menu and NSH choose a major principle. Tested on Firefox and Safari, but not IE.  Other forms of help using principles menu have not been tested.  Build has not been tested.  Still need to fix Bug #1603.  Still need to test slow/failed download of review/principles.json (should not hang, but should have some explanitory text).

--- a/web-UI/css/andes.css
+++ b/web-UI/css/andes.css
@@ -201,3 +201,8 @@ body, .tundra .dijitSplitter, #navMenu{
 g{
 	cursor:pointer;	
 }
+
+/* Percentage avoids the double scrollbar problem */
+ div.tall {
+     height: 80%; overflow: auto;
+   }
